feat: search bar

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   </head>
   <body>
     <h1>PinarDex</h1>
+
+    <div class="search">
+      <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
+    </div>
+
     <div id="poke_container" class="poke-container"></div>
 
     <script src="script.js"></script>
